<resources>
    <string name="app_name">Timing</string>
    <string name="firebase_database_timed_activities" translatable="false">timed-activities</string>
    <string name="firebase_database_activity_session" translatable="false">activity-sessions</string>
    <string name="default_time" translatable="false">00:00:00.000</string>
    <string name="start" translatable="true">Start</string>
    <string name="stop" translatable="true">Stop</string>
    <string name="lap" translatable="true">Lap</string>
    <string name="reset" translatable="true">Reset</string>
    <string name="fab_action_start" translatable="false">Start</string>
    <string name="fab_action_stop" translatable="false">Stop</string>
    <string name="fab_action_lap" translatable="false">Lap</string>
    <string name="fab_action_reset" translatable="false">Reset</string>
    <string name="key_lap_times" translatable="false">lap times</string>
    <string name="key_stopwatch_state" translatable="false">stopwatch state</string>
    <string name="key_stopwatch_actions_state" translatable="false">stopwatch actions state</string>
    <string name="key_timed_activity" translatable="false">timed activity</string>
    <string name="key_total_time" translatable="false">total time</string>
    <string name="label_activities" translatable="true">Activities</string>
    <string name="label_activities_graph" translatable="true">Time Spent % By Category</string>
    <string name="menu_launch_stop_watch" translatable="true">Launch StopWatch</string>
    <string name="edit_activity_category_default" translatable="true">New Activity Category</string>
    <string name="edit_activity_name_default" translatable="true">New Activity Name</string>
    <string name="key_timed_activities" translatable="false">timed activities</string>
    <string name="icon_save_label" translatable="true">Save</string>
    <string name="key_selected_activity" translatable="false">Selected Activity</string>
    <string name="key_tb_status" translatable="false">Toggle Button Status</string>
    <string name="key_new_name_string" translatable="false">User Supplied Name</string>
    <string name="key_new_category_string" translatable="false">User Supplied Category</string>
    <string name="key_selected_activity_index" translatable="false">Highlighted Activity</string>
    <string name="firebase_database_activity_sessions" translatable="false">activitySessions</string>
    <string name="firebase_database_activity_total_elapsed_time" translatable="false">totalElapsedTime</string>
    <string name="firebase_database_activity_user" translatable="false">user</string>
    <string name="empty_data_message" translatable="true">No Timed Activities Available</string>
    <string name="mi_sign_out" translatable="true">Sign Out</string>
    <string name="label_lap" translatable="true">Lap</string>
    <string name="lap_format" translatable="false">%s %s</string>
    <string name="label_date" translatable="true">Date</string>
    <string name="label_labels" translatable="true">Labels</string>
    <string name="key_timed_activity_key" translatable="false">timed-activity-key</string>
    <string name="key_timed_activity_index" translatable="false">timed-activity-index</string>
    <string name="key_user_uid" translatable="false">user-uid</string>
    <string name="key_session_name" translatable="false">session-name</string>
    <string name="default_session_name" translatable="true">Session</string>
    <string name="key_timed_activity_keys" translatable="false">timed-activity-keys</string>
    <string name="pie_graph_label" translatable="true">Category Times %</string>
    <string name="label_name" translatable="true">Name</string>
    <string name="label_category" translatable="true">Category</string>
    <string name="label_time" translatable="true">Time</string>
    <string name="sp_timer" translatable="false">shared-preferences</string>

    <string name="fab_start_stop_description" translatable="true">Button to allow for starting and stopping the stopwatch.</string>
    <string name="fab_reset_lap_description" translatable="true">Button to allow for reseting the current time and creating a new lap.</string>
    <string name="image_play_description" translatable="true">Press to start the stopwatch.</string>
    <string name="image_pause_description" translatable="true">Press to pause the stopwatch.</string>
    <string name="image_stop_description" translatable="true">Press to stop the stopwatch.</string>
    <string name="image_reset_description" translatable="true">Press to reset the stopwatch.</string>
    <string name="image_lap_description" translatable="true">Press to create a lap.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>
